
0.9.6f Oct 20, 2003
 * download notification now prints out the version and pkg size

0.9.6d Oct 20, 2003
 * updated docs
 * reworked parse_packages_txt function
 * fixed possible buffer overflows in parse_packages_txt
 * added more buffer checks in config parser
 * search now searches a packages location field as well
 * --show pkg_name now shows pkg size and uncompressed size
 * transaction report now shows how much will be downloaded
   and how much disk space will be used.
 * --update now shows url for each source download
 * added --dist-upgrade for slackware release upgrades

0.9.6c Oct 15, 2003
 * patch data is now fetched from patches/PACKAGES.TXT instead of
   parsing patches/FILE_LIST
 * set curl user-agent as 'slapt-get'
 * retrieve extra/ package data

0.9.6b Oct 14, 2003
 * fixed bug when removing pkg by base pkg name and removepkg wouldn't find
   entry in /var/log/packages.  Thanks to DanB at mojolin dot com and
   tg at linuxpackages dot net.

0.9.6a Oct 14, 2003
 * fixed issue with allocated strings with --install and --remove
 * fixed --install pkgname --reinstall regression

0.9.6 Oct 13, 2003
 * removed needless check in get_md5sum looking for common slack mirror
   directories.
 * Prompt to upgrade before downloading (thanks kyotou)
 * updated FAQ with dropline question, and upgrade single package question
 * options can now be passed in in any order, so --no-prompt at the end now
   works
 * created struct pkg_list *get_available_and_update_pkgs(void) to search for
   updates and newer available at once, simplified --install and --upgrade
   part of roadmap to package action transactions.
 * implemented transaction engine
 * --interactive option to emulate old upgrade procedure, prompting for each
   upgrade.
 * multiple source support complete.  Linuxpackage integration should be
   working.  slapt-getrc syntax has changed.  Updated documentation
   appropriately.
 * trimmed out download_pkg_list, download_file_list, download_patches_list,