@@ -64,7 +64,7 @@ enum action {
 /* */
 
 #define DEBUG 0
-#define DO_NOT_UNLINK_BAD_FILES 0
+#define DO_NOT_UNLINK_BAD_FILES 1
 #define PKG_LIST "PACKAGES.TXT"
 #define PKG_LIST_L "package_data"
 #define PATCHES_LIST "patches/PACKAGES.TXT"
